--- a/C# again/Dolphiilution+/Dolphiilution+/Dolphiilution+.csproj
+++ b/C# again/Dolphiilution+/Dolphiilution+/Dolphiilution+.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="decompileForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="decompileForm.Designer.cs">
+      <DependentUpon>decompileForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="dolphiiMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,8 +66,12 @@
     </Compile>
     <Compile Include="mainCode.cs" />
     <Compile Include="parseXML.cs" />
+    <Compile Include="patch.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="decompileForm.resx">
+      <DependentUpon>decompileForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dolphiiMain.resx">
       <DependentUpon>dolphiiMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DECOMP.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
